fix: update information and font style

--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="id-ID">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Red+Hat+Display&display=swap"
+          rel="stylesheet">
     <title>Biodata</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
 </head>
 <body>
-    <center><h1>BIODATA</h1></center>
-    <center><img src="img/ava.jpg" alt="Avatar"></center>
-    <div class="konten">
-        <p><b>Nama</b></p>
-        <p>Julio Rahman</p>
-        <p><b>Umur</b></p>
-        <p>18 Tahun</p>
-        <p><b>Email</b></p>
-        <p>julio.rahman@gmail.com</p>
-    </div>
+<div class="center"><h1>BIODATA</h1></div>
+<div class="center"><img src="img/ava.jpg" alt="Avatar"></div>
+<div class="content">
+    <p><b>Nama</b></p>
+    <p>Julio Rahman</p>
+    <p><b>NIM</b></p>
+    <p>2502058244</p>
+    <p><b>Email</b></p>
+    <p>julio.rahman@gmail.com</p>
+    <p><b>Domisili</b></p>
+    <p>Bandung</p>
+    <p><b>Pendidikan Studi</b></p>
+    <p>Teknik Informatika</p>
+    <p><b>Perguruan Tinggi</b></p>
+    <p>Universitas Bina Nusantara</p>
+</div>
 </body>
 </html>
